# libpostal-ffi-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  quality.yml  release-prebuilt-libs.yml
postalkit/: __init__.py  exceptions.py
postalkit/core/: __init__.py  ffi.py
postalkit/data/: checksum.py  manager.py
postalkit/libs/: README.md
postalkit/runtime/: downloader.py  loader.py  paths.py  platform.py
tests/: test_api.py
