[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postalkit"
version = "0.1.0"
description = "Zero-setup, one-command install Python package for libpostal"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "PostalKit Contributors", email = "hello@postalkit.local" }
]
keywords = ["libpostal", "address", "nlp", "parser", "zero-setup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.23.0",
    "tqdm>=4.64.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jayeshmepani/libpostal-ffi-python"
Repository = "https://github.com/jayeshmepani/libpostal-ffi-python"

[tool.hatch.build.targets.wheel]
packages = ["postalkit"]
include = ["postalkit/libs/**/*"]
