[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postalkit"
version = "1.0.4"
description = "Complete 100% 1:1 Python FFI Wrapper for the libpostal C Library - Direct C function calls with zero abstraction for maximum address parsing precision"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Jayesh Mepani", email = "jayeshmepani777@gmail.com" }
]
keywords = [
    "libpostal",
    "address-parser",
    "address-normalization",
    "ffi",
    "ctypes",
    "nlp",
    "geocoding",
    "gis",
    "openvenues",
    "zero-setup",
    "cross-platform",
    "python-ffi",
    "address-standardization",
    "machine-learning",
    "location-intelligence",
    "international-addresses"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "httpx>=0.23.0",
    "tqdm>=4.64.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jayeshmepani/libpostal-ffi-python"
Repository = "https://github.com/jayeshmepani/libpostal-ffi-python"
Issues = "https://github.com/jayeshmepani/libpostal-ffi-python/issues"
Documentation = "https://github.com/jayeshmepani/libpostal-ffi-python/blob/main/README.md"
Funding = "https://github.com/sponsors/jayeshmepani"

[tool.hatch.build.targets.wheel]
packages = ["postalkit"]
include = ["postalkit/libs/**/*"]
