[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postalkit"
version = "1.0.5"
description = "Complete 100% 1:1 Python FFI Wrapper for the libpostal C Library - Direct C function calls with zero abstraction for maximum address parsing precision"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jayesh Mepani", email = "jayeshmepani777@gmail.com" }
]
keywords = [
    "libpostal",
    "address-parser",
    "address-normalization",
    "ffi",
    "ctypes",
    "nlp",
    "geocoding",
    "gis",
    "openvenues",
    "zero-setup",
    "cross-platform",
    "python-ffi",
    "address-standardization",
    "machine-learning",
    "location-intelligence",
    "international-addresses"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "httpx>=0.23.0",
    "tqdm>=4.64.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
    "pre-commit>=4.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["postalkit", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle errors/warnings
    "F",         # Pyflakes
    "I",         # isort (import sorting)
    "N",         # pep8-naming
    "UP",        # pyupgrade (modern syntax)
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "RET",       # flake8-return
    "RUF",       # Ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports and star imports in init
"tests/*" = ["S101"]             # Allow asserts in tests
"postalkit/core/ffi.py" = ["F821", "N806", "N802", "F401", "F403"] # Relax for 1:1 C mapping

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
include = ["postalkit", "tests"]
exclude = ["**/__pycache__", ".venv", "build"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
